--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 
                 <!-- 개인 정보 및 연락처 -->
                 <div class="mb-8">
-                    <img src="https://placehold.co/120x120/06b6d4/ffffff?text=김지환" onerror="this.src='https://placehold.co/120x120/06b6d4/ffffff?text=Profile'" alt="프로필 이미지" class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-cyan-200">
+                    <img src="myself.jpg" onerror="this.src='https://placehold.co/120x120/06b6d4/ffffff?text=Profile'" alt="프로필 이미지" class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-cyan-200">
                     <h2 class="text-2xl font-extrabold text-center text-gray-900">김지환</h2>
                     <p class="text-sm text-center text-gray-600">프론트엔드 개발자</p>
                 </div>
@@ -227,7 +227,7 @@
                         </li>
                         <li class="flex items-center space-x-2">
                             <span class="text-cyan-600">📞</span>
-                            <span>(개인 연락처를 입력하세요)</span>
+                            <span>010-9271-6307</span>
                         </li>
                         <li class="flex items-center space-x-2">
                             <span class="text-cyan-600">🔗</span>
