refactor: Final UI cleanup and Korean text corrections for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 
                 <!-- 개인 정보 및 연락처 -->
                 <div class="mb-8">
-                    <img src="myself.jpg" onerror="this.src='https://placehold.co/120x120/06b6d4/ffffff?text=Profile'" alt="프로필 이미지" class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-cyan-200">
+                    <img src="myself.jpg" onerror="this.src='https://placehold.co/120x120/06b6d4/ffffff?text=김지환'" alt="프로필 이미지" class="w-24 h-24 rounded-full mx-auto mb-4 object-cover border-4 border-cyan-200">
                     <h2 class="text-2xl font-extrabold text-center text-gray-900">김지환</h2>
                     <p class="text-sm text-center text-gray-600">프론트엔드 개발자</p>
                 </div>
@@ -364,7 +364,7 @@
                     <div class="experience-item">
                         <h3 class="text-gray-900">인하공업전문대학 컴퓨터 공학과 (졸업 예정)</h3>
                         <p class="text-sm text-gray-500 mb-1">2021.03 ~ 2026.02 (졸업 예정)</p>
-                        <p class="text-gray-700">웹 프로그래밍, 자료구조, 데이터베이스 등 핵심 전공 이수. 평점 4.1/4.5.</p>
+                        <p class="text-gray-700">웹 프로그래밍, 자료구조, 데이터베이스 등 핵심 전공 이수. 평점 3.6/4.5</p>
                     </div>
 
                     <div class="experience-item">
@@ -381,7 +381,7 @@
                     <!-- 경험 1: 협업형 투두 리스트 -->
                     <div class="experience-item">
                         <h3 class="text-cyan-700">협업 관리 기능이 통합된 투두 리스트 앱 개발</h3>
-                        <p class="text-sm text-gray-500 mb-2">3주 팀 프로젝트 | Vanilla JavaScript, HTML, CSS</p>
+                        <p class="text-sm text-gray-500 mb-2">8주 팀 프로젝트 | Vanilla JavaScript, HTML, CSS</p>
                         <ul class="content-list list-disc text-gray-700 leading-relaxed space-y-2">
                             <li><strong>능동적 팀워크 발휘:</strong> CRUD 기능 외에 팀원 간의 할당 및 소통 기능을 설계하여 공동 작업의 효율성을 높이는 데 주도적인 역할을 수행했습니다. Git을 활용한 기능 분리 개발 및 코드 리뷰를 통해 체계적인 협업을 경험했습니다.</li>
                             <li><strong>데이터 구조 설계:</strong> 다중 사용자 환경을 가정한 데이터 구조를 설계하고, 할 일 목록과 할당 상태를 효율적으로 관리하는 JavaScript 로직을 전담 구현했습니다.</li>
@@ -389,7 +389,8 @@
                         </ul>
                         <!-- 성과: 이미지 + 글 -->
                         <div class="mt-4 flex items-center bg-cyan-50 p-4 rounded-lg border border-cyan-200">
-                             <img src="https://placehold.co/120x80/06b6d4/ffffff?text=협업+UI" alt="협업형 투두 리스트 이미지" class="w-32 h-20 object-cover rounded-md mr-4">
+                             <!-- 텍스트 깨짐 방지를 위해 영문으로 변경 -->
+                             <img src="https://placehold.co/120x80/06b6d4/ffffff?text=Team+Work+UI" alt="협업형 투두 리스트 이미지" class="w-32 h-20 object-cover rounded-md mr-4">
                             <div>
                                 <h4 class="font-semibold text-cyan-700">성과 상세</h4>
                                 <p class="text-sm text-gray-700">팀 프로젝트의 요구사항 분석 단계부터 참여하여, 기능적 복잡도를 최소화하는 데이터 분리 전략을 수립하고 기한 내 성공적으로 배포했습니다.</p>
@@ -400,7 +401,7 @@
                     <!-- 경험 2: 무한 반복 플레이리스트 -->
                     <div class="experience-item">
                         <h3 class="text-cyan-700">무한 순환 로직 기반의 웹 오디오 플레이어</h3>
-                        <p class="text-sm text-gray-500 mb-2">2주 개인 프로젝트 | Vanilla JavaScript (Audio Object), HTML, CSS</p>
+                        <p class="text-sm text-gray-500 mb-2">12주 개인 프로젝트 | Vanilla JavaScript (Audio Object), HTML, CSS</p>
                         <ul class="content-list list-disc text-gray-700 leading-relaxed space-y-2">
                             <li><strong>논리적 문제 해결:</strong> 오디오 객체의 `ended` 이벤트를 활용하여 다음 곡을 자동으로 로드하고 플레이리스트를 무한히 순환시키는 복잡한 로직을 직접 설계 및 구현했습니다.</li>
                             <li><strong>기술 심화:</strong> HTML5 Audio 객체의 속성 및 이벤트를 직접 제어하여 재생 상태, 진행률 바, 볼륨 제어 등의 커스텀 UI를 완벽하게 동기화했습니다. 미디어 제어와 사용자 정의 UI를 동기화하는 비동기 처리 능력을 향상했습니다.</li>
@@ -419,7 +420,7 @@
                     <!-- 경험 3: 푸드트럭 부스 선정 투표 시스템 -->
                     <div class="experience-item">
                         <h3 class="text-cyan-700">사용자 투표 기반의 동적 위치 선정 시스템</h3>
-                        <p class="text-sm text-gray-500 mb-2">2주 팀 프로젝트 | Vanilla JavaScript (Dynamic Rendering), HTML, CSS</p>
+                        <p class="text-sm text-gray-500 mb-2">4주 팀 프로젝트 | Vanilla JavaScript (Dynamic Rendering), HTML, CSS</p>
                         <ul class="content-list list-disc text-gray-700 leading-relaxed space-y-2">
                             <li><strong>반응형 UX/UI 구현:</strong> 가상의 부스 지도 UI를 설계하고, 모바일 및 데스크톱 환경에서 모두 직관적으로 투표하고 결과를 확인할 수 있는 반응형 UI를 구현했습니다.</li>
                             <li><strong>동적 데이터 처리:</strong> 사용자 투표 데이터가 변경될 때마다 순위와 부스 위치 정보를 지연 없이 실시간으로 업데이트하는 JavaScript 동적 렌더링 로직을 개발했습니다. 이는 데이터 변화에 따른 UI 효율성을 극대화한 경험입니다.</li>
@@ -427,7 +428,8 @@
                         </ul>
                          <!-- 성과: 이미지 + 글 -->
                         <div class="mt-4 flex items-center bg-cyan-50 p-4 rounded-lg border border-cyan-200">
-                             <img src="https://placehold.co/120x80/06b6d4/ffffff?text=Voting+UI" alt="투표 시스템 이미지" class="w-32 h-20 object-cover rounded-md mr-4">
+                             <!-- 텍스트 깨짐 방지를 위해 영문으로 변경 -->
+                             <img src="https://placehold.co/120x80/06b6d4/ffffff?text=Voting+System" alt="투표 시스템 이미지" class="w-32 h-20 object-cover rounded-md mr-4">
                             <div>
                                 <h4 class="font-semibold text-cyan-700">성과 상세</h4>
                                 <p class="text-sm text-gray-700">시각적인 부스 지도와 투표 현황 시각화를 통해 사용자의 몰입도를 높였으며, 서비스의 비즈니스 로직(투표 공정성)을 고려한 UI 설계를 경험했습니다.</p>
@@ -455,12 +457,17 @@
 
     <!-- JavaScript 로직 -->
     <script>
-        // PDF 출력 버튼 이벤트 리스너
-        document.getElementById('printButton').addEventListener('click', () => {
-            // 브라우저의 기본 인쇄 대화 상자를 호출합니다.
-            // 인쇄 대화 상자에서 'PDF로 저장'을 선택하면 PDF 파일로 저장됩니다.
+        // PDF 출력 함수
+        const handlePrint = () => {
             window.print();
-        });
+        };
+
+        // 모바일 버튼 리스너
+        // 데스크톱 환경에서는 이 버튼을 숨기고, 대신 메인 콘텐츠 하단의 버튼을 사용합니다.
+        const printButton = document.getElementById('printButton');
+        if (printButton) {
+            printButton.addEventListener('click', handlePrint);
+        }
     </script>
 </body>
 </html>
